src/test/ui/dyn-keyword/dyn-2021-edition-error.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/dyn-2021-edition-error.rs:6:14
   |
LL |     let _x: &SomeTrait = todo!();
   |              ^^^^^^^^^ `dyn` keyword should be added before this trait

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/dyn-2021-edition-error.rs:3:17
   |
LL | fn function(x: &SomeTrait, y: Box<SomeTrait>) {
   |                 ^^^^^^^^^ `dyn` keyword should be added before this trait

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/dyn-2021-edition-error.rs:3:35
   |
LL | fn function(x: &SomeTrait, y: Box<SomeTrait>) {
   |                                   ^^^^^^^^^ `dyn` keyword should be added before this trait

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0782`.
